--- a/public/css/CalendarBody.css
+++ b/public/css/CalendarBody.css
@@ -1,16 +1,18 @@
 table.CalendarBody {
     font-family: Arial;
-    /*border-collapse: collapse;*/
+    -webkit-box-shadow: 0px 0px 6px 0px rgba(50, 50, 50, 0.2);
+    -moz-box-shadow: 0px 0px 6px 0px rgba(50, 50, 50, 0.2);
+    box-shadow: 0px 0px 6px 0px rgba(50, 50, 50, 0.2);
+
 }
 
 table.CalendarBody th {
-    background: #ffffff;
+    background: rgb(244, 244, 244);
     color: rgb(13, 13, 13);
     font-size: 12px;
     padding: 4px;
-    border: 1px solid #d6d6d6;
+    border: 1px solid #cbcbcb;
     font-weight: bold;
-    /*border-top: none;*/
 }
 
 table.CalendarBody tbody td {
@@ -31,7 +33,7 @@ table.CalendarBody tbody td time {
 }
 
 table.CalendarBody tbody td.CBsuffix, table.CalendarBody tbody td.CBprefix {
-    background: #F7F7F7;
+    background: #ebebeb;
 }
 
 table.CalendarBody tbody td div.event {
@@ -39,46 +41,52 @@ table.CalendarBody tbody td div.event {
     font-size: 12px;
     padding: 5px;
     line-height: 1em;
-    border-bottom: 1px solid #c3d0e9;
-    background: #d8e6f9;
+    border-top: 1px solid #c4cfe8;
+    border-bottom: 1px solid #8690a9;
+    background: #ffad6e;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    margin: 2px;
 }
 
 table.CalendarBody tbody td.today {
-    background: #eaf5f5;
+    background: #bbc0d1;
 }
-table.CalendarBody tbody td div.event a{
+
+table.CalendarBody tbody td div.event a {
     color: #100f1e;
     text-decoration: none;
 }
 
-   .navbar-static-top {
-        margin-bottom: 20px;
-    }
+.navbar-static-top {
+    margin-bottom: 20px;
+}
 
-    i {
-        font-size: 18px;
-    }
+i {
+    font-size: 18px;
+}
 
-    footer {
-        margin-top: 20px;
-        padding-top: 20px;
-        padding-bottom: 20px;
-        background-color: #efefef;
-    }
+footer {
+    margin-top: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: #efefef;
+}
 
-    .nav > li .count {
-        position: absolute;
-        top: 10%;
-        right: 25%;
-        font-size: 10px;
-        font-weight: normal;
-        background: rgba(41, 200, 41, 0.75);
-        color: rgb(255, 255, 255);
-        line-height: 1em;
-        padding: 2px 4px;
-        -webkit-border-radius: 10px;
-        -moz-border-radius: 10px;
-        -ms-border-radius: 10px;
-        -o-border-radius: 10px;
-        border-radius: 10px;
-    }
+.nav > li .count {
+    position: absolute;
+    top: 10%;
+    right: 25%;
+    font-size: 10px;
+    font-weight: normal;
+    background: rgba(41, 200, 41, 0.75);
+    color: rgb(255, 255, 255);
+    line-height: 1em;
+    padding: 2px 4px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    border-radius: 10px;
+}
